Make sure navbar hamburger menu is displayed when collapsed

--- a/css/bootstrap-overrides.css
+++ b/css/bootstrap-overrides.css
@@ -7,6 +7,10 @@
     }
 }
 
+#autocollapse.collapsed .navbar-toggle {
+    display: block;
+}
+
 #autocollapse.collapsed .navbar-header {
     float: none;
 }
